Adjust size of text input dialog (CInputDlg)

--- a/src/tools/oedit/oedit/ChangeLog.txt
+++ b/src/tools/oedit/oedit/ChangeLog.txt
@@ -2166,3 +2166,6 @@ ver.9.0.0.0 (2025-05-07)
 ver.9.0.0.1 (2025-05-08)
 ・バージョン情報ダイアログのサイズ調整
 
+ver.9.0.0.2 (2025-05-16)
+・テキスト入力ダイアログ(CInputDlg)のサイズ調整
+
