Add support for selecting editor color schemes, including a new "solarized" preset
Users can now choose from multiple editor color patterns.
Added a "solarized" color scheme as a selectable preset.

--- a/src/tools/otbedit/oedit/ChangeLog.txt
+++ b/src/tools/otbedit/oedit/ChangeLog.txt
@@ -1780,4 +1780,5 @@ ver.8.0.0.0 (2025-05-07)
 ver.8.0.0.1 (2025-05)
 ・テキスト入力ダイアログ(CInputDlg)のサイズ調整
 ・ソースコードをUTF8に変換
+・エディタの色設定を複数パターンから選択できるようにした (solarized colorを追加)
 
