--- a/src/tools/oedit/oedit/ChangeLog.txt
+++ b/src/tools/oedit/oedit/ChangeLog.txt
@@ -2170,4 +2170,5 @@ ver.9.0.0.1 (2025-05-08)
 ver.9.0.0.2 (2025-05)
 ・テキスト入力ダイアログ(CInputDlg)のサイズ調整
 ・ソースコードをUTF8に変換
+・エディタの色設定を複数パターンから選択できるようにした (solarized colorを追加)
 
