--- a/src/tools/oedit/oedit/ChangeLog.txt
+++ b/src/tools/oedit/oedit/ChangeLog.txt
@@ -2163,12 +2163,13 @@ ver.9.0.0.0 (2025-05-07)
 ・ヘルプ→Creditsメニューを追加 (doc\credits.txtを表示)
 ・関連付けメニュー、キーボードマクロメニューを削除 (Windows10/11では動作しない)
 
-ver.9.0.0.1 (2025-05-08)
+ver.9.0.0.1 (2025-05-23)
 ・バージョン情報ダイアログのサイズ調整
-
--------- ここから未リリース
-ver.9.0.0.2 (2025-05)
 ・テキスト入力ダイアログ(CInputDlg)のサイズ調整
 ・ソースコードをUTF8に変換
 ・エディタの色設定を複数パターンから選択できるようにした (solarized colorを追加)
+
+-------- ここから未リリース
+ver.9.0.0.3 (2025-05-)
+
 
