--- a/src/tools/otbedit/oedit/ChangeLog.txt
+++ b/src/tools/otbedit/oedit/ChangeLog.txt
@@ -1776,9 +1776,10 @@ ver.8.0.0.0 (2025-05-07)
 ・ヘルプ→Creditsメニューを追加 (doc\credits.txtを表示)
 ・関連付けメニュー, キーボードマクロメニューを削除 (Windows10/11では動作しない)
 
--------- ここから未リリース
-ver.8.0.0.1 (2025-05)
+ver.8.0.0.1 (2025-05-23)
+・エディタの色設定を複数パターンから選択できるようにした (solarized colorを追加)
 ・テキスト入力ダイアログ(CInputDlg)のサイズ調整
 ・ソースコードをUTF8に変換
-・エディタの色設定を複数パターンから選択できるようにした (solarized colorを追加)
+
+-------- ここから未リリース
 
