Add "solarized-dark" to editor color preset patterns

--- a/src/tools/oedit/oedit/ChangeLog.txt
+++ b/src/tools/oedit/oedit/ChangeLog.txt
@@ -2170,6 +2170,6 @@ ver.9.0.0.1 (2025-05-23)
 ・エディタの色設定を複数パターンから選択できるようにした (solarized colorを追加)
 
 -------- ここから未リリース
-ver.9.0.0.3 (2025-05-)
-
+ver.9.0.0.2 (2025-05-)
+・エディタの色設定のパターンにsolarized-darkを追加
 
