Add sys-getenv to scheme macro

--- a/src/tools/oedit/oedit/ChangeLog.txt
+++ b/src/tools/oedit/oedit/ChangeLog.txt
@@ -2172,4 +2172,4 @@ ver.9.0.0.1 (2025-05-23)
 -------- ここから未リリース
 ver.9.0.0.2 (2025-05-)
 ・エディタの色設定のパターンにsolarized-darkを追加
-
+・schemeマクロにsys-getenvを追加
