--- a/src/tools/otbedit/oedit/ChangeLog.txt
+++ b/src/tools/otbedit/oedit/ChangeLog.txt
@@ -1781,9 +1781,11 @@ ver.8.0.0.1 (2025-05-23)
 ・テキスト入力ダイアログ(CInputDlg)のサイズ調整
 ・ソースコードをUTF8に変換
 
--------- ここから未リリース
-
-ver.8.0.0.2 (2025-05-)
+ver.8.0.0.2 (2025-08-02)
 ・エディタの色設定のパターンにsolarized-darkを追加
 ・schemeマクロにsys-getenvを追加
+・起動時や新規にタブを開いたとき、タブタイトルの「無題」が文字化けする問題を修正
+
+-------- ここから未リリース
+
 
